Fixed bottom paddings in framework hero section mobile

--- a/src/pages/EventGateway/style.css
+++ b/src/pages/EventGateway/style.css
@@ -437,7 +437,7 @@
 
   .heroBulletsAlternate{
     padding-top: 60px;
-    padding-bottom: 60px;
+    padding-bottom: 20px;
 
     .heroBullets{
       padding: 0px 25px;
